--- a/sakila.ipynb
+++ b/sakila.ipynb
@@ -638,11 +638,11 @@
     "\n",
     "- Propensa a ofertas (segundo nivel):\n",
     "tiene menos de 12 rentas y dura mas de 100 min:\n",
-    "50% de descuento + una película gratis \n",
+    "35% de descuento + una película gratis de maximo 90 min \n",
     "\n",
     "- propensa a ofertas (primer nivel):\n",
     "tiene menos de 10 rentas y en el cúmulo de actores de la película no hay ninguno popular, se toma en este caso como medida de popularidad de cada actor si el total_sales supera los $1837 que es el promedio de ventas de un actor:\n",
-    "35% de descuento + una película gratis de maximo 90 min \n"
+    "50% de descuento + una película gratis \n"
    ]
   },
   {
